--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
          <li id="login"></li>
          <li id="login" style="font-size: 300%;"><b>SENHA:</b><input style="font-size: 80%; border: 0; border-bottom: solid;" type="text" placeholder=""></li> 
          <li id="login" style="visibility: hidden;">a</li> 
-         <li id="login"><b>Logar com: </b> <a  id="mail"><i class="fa-solid fa-envelope fa-2xl"></i>Email</a>  <a id="mail"><i class="fa-brands fa-facebook fa-2xl"></i>Facebook</a></li> 
+         <li id="login"><b>Logar com: </b> <a  id="mail"><i class="fa-solid fa-envelope fa-2xl"></i>Email</a>  <a id="mail"><i class="fa-brands fa-facebook fa-2xl"></i>Facebook</a> <button style="margin-left: 10%;width: 20ch; height: 5ch; border: 0; border-radius: 7%; background-color: rgb(209, 127, 34); color: rgb(255, 255, 255);"><b><a style="font-size: 120%; color: rgb(255, 255, 255);" href="" class="txt">ENTRAR</a></b></button>
+            <button style="width: 20ch; height: 5ch; border: 0; border-radius: 7%; background-color: rgb(209, 127, 34); color: rgb(255, 255, 255);"><b><a style="font-size: 120%; color: rgb(255, 255, 255);" class="txt" href="">CADASTRAR</a></b></button></li> 
+         <li style="list-style: none;"></li>
     </t>
    
 </div>
