--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="cima">
         <button id="menu" style="margin-left: 26%;"><b><a id="texte" href="https://raul-44.github.io/restaurante_inicio/">INÍCIO</a></b></button>
-        <button id="menu"><b><a id="texte" href="">SOBRE NÓS</a></b></button>
+        <button id="menu"><b><a id="texte" href="https://raul-44.github.io/restaurante_busca/">BUSCA</a></b></button>
         <button id="menu"><b><a id="texte" href="">SOBRE NÓS</a></b></button>
         <button id="menu"><b><a id="texte" href="">CONTATO</a></b></button>
         <button id="menu" style="margin-right: 17%;"><b><a id="texte" href="">PEDIDOS</a></b></button> 
